tests/invalid/Final_Invalid_7.whiley
function f(int x) -> (int r):
    //
    final int y = 1
    //
    y = y + 1
    //
    return y